Made popover widgets look more like the other menus.

--- a/gtk-3.0/Stylus/Containers.styl
+++ b/gtk-3.0/Stylus/Containers.styl
@@ -80,8 +80,7 @@ GtkWindow
  */
 .popover,
 .popover.background
-    bevel:                  1px outset shade(MenuColor, light) LightBlack;
-    background-clip:        border-box;
+    deep-outset();
     background-color:       MenuColor;
     border-radius:          0.5em;
     color:                  MenuTextColor;
