--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -137,12 +137,13 @@ GtkWindow:backdrop,
 .popover,
 .popover.background {
   background-clip: border-box;
-  border-color: #3d3d3d;
-  border-bottom-color: #191919;
-  border-right-color: #191919;
+  border-color: rgba(198,198,198,0.125);
+  border-bottom-color: rgba(36,36,36,0.125);
+  border-right-color: rgba(36,36,36,0.125);
   border-style: solid;
   border-width: 1px;
-  background-clip: border-box;
+  background-color: rgba(162,162,162,0.5);
+  box-shadow: 0px 0px 0px 1px #292929, -1px -1px 0px rgba(36,36,36,0.875), 3px 3px 5px rgba(0,0,0,0.25);
   background-color: #252525;
   border-radius: 0.5em;
   color: #bbb;
