Made the bottom border of primary toolbars a separator.
The bottom border color of the primary toolbar in Evolution is hard
coded to a non-transparent color, and attempts to remove it have no
effect. So, I made these into separators and actually kind of liked
the look of it universally (i.e. in other apps with primary toolbars).

--- a/gtk-3.0/Stylus/Bars.styl
+++ b/gtk-3.0/Stylus/Bars.styl
@@ -94,6 +94,9 @@ GtkLevelBar.level-bar
             flat();
             padding: 0px;
 
+.primary-toolbar
+    border-bottom-color:    transparent;
+    border-image:           -gtk-scaled(url("Icons/Separator-Horizontal.svg")) 0 0 2 0 / 0px 0px 2px 0px stretch;
 
 .scale,
 GtkScale,
