Made comboboxes appearing inside notebooks a bit smaller.

--- a/gtk-3.0/Stylus/Controls.styl
+++ b/gtk-3.0/Stylus/Controls.styl
@@ -70,6 +70,9 @@ GtkComboBox
         border-radius:          0.25em;
         padding:                0.5em;
 
+        .notebook &
+            padding:            0.25em;
+
         &:hover, &:prelight
             background-color:   HighlightColor;
             background-image:   none;
