Gave some esoteric controls a background color.
Many of the styling properties are hard-coded and insensitive to
CSS theming, so unfortunately these widgets still look pretty weird.

--- a/gtk-3.0/Stylus/Cells.styl
+++ b/gtk-3.0/Stylus/Cells.styl
@@ -118,6 +118,12 @@ GtkScrolledWindow
     border-radius:              0.25em;
     padding:                    1px;
 
+FooScrollArea,
+GtkDrawingArea
+    background-color:           WindowColorDim;
+    &:backdrop
+        background-color:       WindowColorDimmer;
+
 /* RUBBERBAND - Controls the scalable rectangle drawn when selecting multiple icons using the mouse. */
 .rubberband
     background-color:           alpha(HighlightColor, 0.5);
