Made buttons appearing inside notebooks a bit smaller.

--- a/gtk-3.0/Stylus/Buttons.styl
+++ b/gtk-3.0/Stylus/Buttons.styl
@@ -111,6 +111,9 @@ button-text-color(c)
             border-radius:          0.5em;
             border-width:           1px;
 
+    .notebook &
+        padding:                    0.75em;
+
 
 
 /* COLUMN-HEADER - Governs the title buttons at the top of sortable lists. */
